fixing gap login page

--- a/kanban-board/src/pages/Auth/index.css
+++ b/kanban-board/src/pages/Auth/index.css
@@ -14,6 +14,12 @@
     border-radius: 30px;
     background-color: #FFF3BF;
     padding: 20px;
+    gap: 18px;
+}
+.form-content {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
 }
 .text-center {
     font-size: 30px;
